# ai-stonk-reports

./: .gitignore  README.md  euro-stonks.yaml  llm_client.py  main.py  pyproject.toml  requirements.txt  scraper.py  statement_aggregator.py  table_extractor.py  test_scraper.py  test_statement_aggregator.py  test_table_extractor.py  utils.py
golden_test_files/result_tables/Eaton Corporation/2016/balance_sheet/: balance_sheet_page_3.md
golden_test_files/result_tables/Eaton Corporation/2016/cash_flow/: cash_flow_page_4.md
golden_test_files/result_tables/Eaton Corporation/2016/income_statement/: income_statement_page_2.md
golden_test_files/result_tables/Eaton Corporation/2024/balance_sheet/: balance_sheet_page_3.md
golden_test_files/result_tables/Eaton Corporation/2024/cash_flow/: cash_flow_page_4.md
golden_test_files/result_tables/Eaton Corporation/2024/income_statement/: income_statement_page_1.md  income_statement_page_2.md
golden_test_files/result_tables/Eaton Corporation/master/: balance_sheet_master.md  cash_flow_master.md  income_statement_master.md
golden_test_files/test_company_markdown_result/Eaton_Corporation_2016_Annual_Report/2016/balance_sheet/: balance_sheet_page_3.md
golden_test_files/test_company_markdown_result/Eaton_Corporation_2016_Annual_Report/2016/cash_flow/: cash_flow_page_4.md
golden_test_files/test_company_markdown_result/Eaton_Corporation_2024_Annual_Report/: balance_sheet_page_3.md  cash_flow_page_4.md  income_statement_page_1.md  income_statement_page_2.md
(+6 files in other folders)
